[package]
name = "route53-register"
version = "0.1.0"
authors = ["mozamimy <alice@mozami.me>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws_lambda_events = "0.2"
env_logger = "0.6"
failure = "0.1"
lambda_runtime = "0.2"
log = "0.4"
rusoto_core = "0.39"
rusoto_ec2 = "0.39"
rusoto_route53 = "0.39"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
